.provarCaches/00D410000011HE0EAM/objects/rstkf__glperiod__c.object
<CustomObject>
    <description>glperiod__c</description>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__glperiod_glyear__r.rstkf__glyear_year__c) &amp; &apos;-&apos; &amp; TEXT(rstkf__glperiod_period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glperiod_cmpno__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Fiscal Period</relationshipLabel>
        <relationshipName>glperiods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_end__c</fullName>
        <description>glperiod_end__c</description>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_glyear__c</fullName>
        <description>glperiod_glyear__c</description>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>GL Fiscal Period</relationshipLabel>
        <relationshipName>glperiods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_parentglperiod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field provides a reference to the associated Fiscal Period in the Parent Company for this period in a Subsidiary Company.</inlineHelpText>
        <label>Associated GL Period in Parent Company</label>
        <referenceTo>rstkf__glperiod__c</referenceTo>
        <relationshipLabel>GL Fiscal Period</relationshipLabel>
        <relationshipName>GL_Fiscal_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_period__c</fullName>
        <description>glperiod_period__c</description>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_quarter__c</fullName>
        <description>glperiod_quarter__c</description>
        <label>Quarter Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_start__c</fullName>
        <description>glperiod_start__c</description>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glperiod_type__c</fullName>
        <description>glperiod_type__c</description>
        <label>Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Forward</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Fiscal Period</label>
    <listViews>
        <fullName>rstkf__GLPERIOD</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glperiod_cmpno__c</columns>
        <columns>rstkf__glperiod_glyear__c</columns>
        <columns>rstkf__glperiod_parentglperiod__c</columns>
        <columns>rstkf__glperiod_period__c</columns>
        <columns>rstkf__glperiod_end__c</columns>
        <columns>rstkf__glperiod_start__c</columns>
        <columns>rstkf__glperiod_type__c</columns>
        <columns>rstkf__glperiod_quarter__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glperiod_cmpno__c</field>
            <operation>contains</operation>
            <value>Jon,Chandra</value>
        </filters>
        <label>GLPERIOD</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Fiscal Period</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>